# libarchive-rs

./: Cargo.toml  README.md
src/: archive.rs  error.rs  lib.rs  reader.rs  writer.rs
src/archive/: archive_handle.rs  handle.rs  mod.rs
src/entry/: entry.rs  entry_borrowed.rs  entry_owned.rs  mod.rs
src/error/: mod.rs
src/reader/: builder.rs  file_reader.rs  mod.rs  reader.rs  stream_reader.rs
src/writer/: builder.rs  disk.rs  mod.rs  writer.rs
sys/: Cargo.toml  build.rs
sys/src/: ffi.rs  lib.rs
tests/: lib.rs
