[package]
name = "libarchive"
version = "0.5.0"
authors = [
	"Jamie Winsor <reset@chef.io>",
	"albel727",
]
license = "Apache-2.0"
repository = "https://github.com/chef/libarchive-rust"
description = "A safe Rust API for authoring and extracting archives with libarchive"
keywords = ["libarchive", "archive", "tar", "zip"]

edition = "2018"

[dependencies]
libc = ">= 0.2.0"
libarchive3-sys = { version = "0.1.2", path = "sys" }
